# SubjSharedComputing

./: .gitignore
Lab1/: CMakeLists.txt
Lab1/ParallelIntegral/: CMakeLists.txt
Lab1/ParallelIntegral/include/ParallelIntegral/: CalculationThread.hpp  IFunction.hpp  Integrator.hpp  ThreadManager.hpp
Lab1/ParallelIntegral/src/: CalculationThread.cpp  Integrator.cpp  ThreadManager.cpp
Lab1/include/Lab1/: Integrator.hpp
Lab1/scripts/: build_vs16_2019.bat  build_vs17_2022.bat
Lab1/src/: Integrator.cpp  main.cpp
Lab2/: CMakeLists.txt
Lab2/Client/: CMakeLists.txt
Lab2/Client/include/Client/: EndpointService.hpp  Integrator.hpp
Lab2/Client/src/: EndpointService.cpp  Integrator.cpp  main.cpp
Lab2/Server/: CMakeLists.txt
Lab2/Server/include/Server/: CoreService.hpp  Session.hpp
Lab2/Server/src/: CoreService.cpp  Session.cpp  main.cpp
Lab2/scripts/: build_make.sh
